[metadata]
description = Python module for interacting with a Luxafor device.
author = Magnus Isaksson
author_email = 'dr.isaksson@gmail.com'
license = gpl3
url = ''

# Comma separated list of data INSIDE your package to include.
# DO NOT prepend the package name when specifying files and folders.
package_data = 
# Comma separated list of data OUTSIDE your package to include.
# Equivalent to adding files to MANIFEST.in which is not needed.
data_files = *.rst, *.txt, *.md
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 3 - Alpha,
              Programming Language :: Python :: 2.7,
              Programming Language :: Python :: 3.4,
              License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[console_scripts]
luxafor_cli = pyluxafor.cli:run

[data_files]
# Add here data to be included which lies OUTSIDE your package, e.g.
# path/to/destination = files/to/include, others/to/include
# This is equivalent to adding files to MANIFEST.in which is not needed.
# The destination is relative to the root of your virtual environment.
#share/pyluxafor = *.rst, *.txt

[extras_require]
# Add here additional requirements for extra features, like:
# PDF = ReportLab>=1.2, RXP

[test]
# html, xml or annotate
#cov-report = html
#junitxml = junit.xml

[pytest]
# Options for py.test
#flakes-ignore =
#    doc/conf.py ALL
#pep8-ignore =
#    doc/conf.py ALL
